tests/control/if_non_bool_condition.esl.err
[90mif_non_bool_condition.esl: [m[1;31mError:[m If statement's condition must be a bool
   1 | [31m/[m/ error: If statement's condition must be a bool
       ^ [31mIf statement's condition must be a bool[m
